# jutsu-anime-downloader

./: .gitignore  README.md  cookies.txt.example  main.py  pyproject.toml
