[project]
name = "jutsu-anime-downloader"
version = "0.1.0"
description = "A script to download anime from jut.su, with support for quality selection, season/episode selection, and Cloudflare bypass."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
